# listtree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  listtree
newdir/: inside.txt
src/: main.cpp
